ready to publish alpha

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
 
 <body>
     <form>
-        Character Level: <input type="number" name="characterLevel"><br>
+        Character Level: <input id="baseLevel" type="number" name="baseLevel"><br>
     </form>
     <script src="popup.js"></script>
 </body>
